--- a/app/views/create.scala.html
+++ b/app/views/create.scala.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 
-</body>
-</html>
+
+
+@{ /*
+@(postForm:Form[Post])
+
+@import controllers.post.Post._
+@import helpers._
+
+@helper.form(action = routes.Application.postForm) {
+@inputText(postForm("id"))
+@inputText(postForm("title"))
+@inputText(postForm("body"))
+<input type="submit" value="submit">
+}
+*/ }
